--- a/open/composer.json
+++ b/open/composer.json
@@ -1,7 +1,7 @@
 {
 	"description" : "The CodeIgniter Application with Composer",
 	"require": {
-		"php": ">=5.3.2",
+		"php": "^8.1.0",
 		"codeigniter/framework": "3.1.*"
 	},
 	"require-dev": {
